add header and img icon

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="img/icons/run_man.png" alt="run-man">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+380996498133" class="header__phone">### ## ### ####</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+        </div>
+    </div>
     
 </body>
 </html>
