--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,32 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+
+            <div class="promo_wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                
+                <div class="promo_icons">
+                    <div class="promo__icon">
+                        <img src="img/icons/timer.png" alt="timer">
+                        Время подбора: 10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/icons/cart.png" alt="cart">
+                        Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="img/icons/message.png" alt="message">
+                        Ответим на все вопросы
+                    </div>
+                </div>
+
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo_link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
         </div>
     </div>
     
