--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -109,5 +110,27 @@
             </form>
         </div>
     </div>
+
+    <div class="carusel">
+        <div class="container">
+            <button type="button" class="prev"><img src="img/slaider/left.png"></button>
+            <div class="carusel__inner">
+                <div>
+                    <img src="img/slaider/first.png" alt="sl">
+                </div>
+                <div>
+                    <img src="img/slaider/second.png" alt="sl">
+    
+                </div>
+                <div>
+                    <img src="img/slaider/third.png" alt="sl">
+                </div>
+            </div>
+            <button type="button" class="next"><img src="img/slaider/right.png"></button> 
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
