--- a/src/index.html
+++ b/src/index.html
@@ -141,11 +141,11 @@
                 <li class="catalog__tab"><div>для триатлона</div></li>
             </ul>
 
-            <div class="catalog__content">
+            <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
                    <div class="catalog-item__wrapper">
                     <!-- catalog-item__content_active -->
-                        <div class="catalog-item__content ">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">
@@ -153,7 +153,8 @@
                             </div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <!-- catalog-item__list_active -->
+                        <ul class="catalog-item__list">
                             <li>
                                 Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                             </li>
@@ -166,6 +167,7 @@
                             <li>
                                 Вы сможете посмотреть данные по 10 тренировкам.
                             </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                         </ul>
                    </div>
                     <hr>
@@ -181,7 +183,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -189,7 +191,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -202,6 +204,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -217,7 +220,7 @@
                  <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -225,7 +228,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -238,6 +241,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -254,7 +258,7 @@
                  <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -262,7 +266,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -275,6 +279,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -290,7 +295,7 @@
                  <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -298,7 +303,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -311,6 +316,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -326,7 +332,7 @@
                  <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -334,7 +340,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -347,6 +353,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -364,7 +371,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -372,7 +379,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -385,6 +392,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -397,12 +405,12 @@
                      </div>
                  </div>
             </div>
-            
+
             <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -410,7 +418,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -423,6 +431,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -437,7 +446,7 @@
                  <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                      <!-- catalog-item__content_active -->
-                         <div class="catalog-item__content ">
+                         <div class="catalog-item__content catalog-item__content_active">
                              <img src="img/pulsom/puls.png" alt="pulsometr" class="catalog-item__img">
                              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                              <div class="catalog-item__descr">
@@ -445,7 +454,7 @@
                              </div>
                              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                          </div>
-                         <ul class="catalog-item__list catalog-item__list_active">
+                         <ul class="catalog-item__list ">
                              <li>
                                  Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                              </li>
@@ -458,6 +467,7 @@
                              <li>
                                  Вы сможете посмотреть данные по 10 тренировкам.
                              </li>
+                            <a href="#" class="catalog-item__back">назад</a>
                          </ul>
                     </div>
                      <hr>
@@ -473,6 +483,7 @@
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
