--- a/src/index.html
+++ b/src/index.html
@@ -530,6 +530,21 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12321.783758850032!2d30.539031602245032!3d50.442256000404214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce59e3ab65a7%3A0x694b8565cab02eaf!2z0JfQvtC70L7RgtGWINCy0L7RgNC-0YLQsA!5e0!3m2!1suk!2sua!4v1676574111791!5m2!1suk!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="footer__info">
+            <address class="footer__adr ">вулиця Володимирська, 40А, Київ</address>
+            <a class="footer__phone" href="tel:380996498133">### ## ### ###</a>
+            <div class="footer__social">
+                <a href="#" class="footer__socil-item"><img src="img/footer/facebook.png" alt="facebook"></a>
+                <a href="#" class="footer__socil-item"><img src="img/footer/instagram.png" alt="inst"></a>
+                <a href="#" class="footer__socil-item"><img src="img/footer/pint.png " alt="pint"></a>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
