--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="promo">
-        <div class="container">
+        <div class="container" id="up">
             <header class="header">
                 <a href="#" class="header__logo">
                     <img src="img/icons/run_man.png" alt="run-man">
@@ -578,6 +578,10 @@
             <div class="modal__descr">Наш менеджер свяжется с вами <br> в ближайшее время!</div>
         </div>
     </div>
+
+    <a href="#up" class="pageup">
+        <img src="img/up.png" alt="up" >
+    </a>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
