--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img src="img/icons/heart.png" alt="heart">
+                    <img src="img/icons/heart.png" alt="heart" class="advantages__icon_animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
